--- a/css/styles.css
+++ b/css/styles.css
@@ -160,12 +160,16 @@ body {
   display: block;
   position: absolute;
   content: "";
-  bottom: 10px;
+  bottom: -1px;
   left: 0;
   width: 100%;
   height: 4px;
   border-radius: 2px;
   transition: opacity var(--timing-duration) var(--timing-function);
+}
+
+.menu-item .link-nav.current {
+  color: var(--ocean);
 }
 
 .link-nav.current::after {
@@ -609,7 +613,7 @@ body {
   color: var(--iris);
 
   transition: background-color var(--timing-duration) var(--timing-function),
-    border 250ms var(--timing-duration) var(--timing-function),
+    border var(--timing-duration) var(--timing-function),
     color var(--timing-duration) var(--timing-function),
     box-shadow var(--timing-duration) var(--timing-function);
 }
@@ -695,6 +699,7 @@ body {
 
 .backdrop {
   position: fixed;
+  opacity: 1;
   z-index: 4;
   top: 0;
   left: 0;
@@ -704,7 +709,8 @@ body {
     rgba(46, 47, 66, 0.7),
     rgba(46, 47, 66, 0.7)
   );
-  transition: opacity var(--timing-duration) var(--timing-function);
+  transition: opacity var(--timing-duration) var(--timing-function),
+    visibility var(--timing-duration) var(--timing-function);
 }
 
 .backdrop.is-hidden {
@@ -715,10 +721,12 @@ body {
 
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(1.1);
+  opacity: 0;
 }
 
 .modal {
   position: absolute;
+  opacity: 1;
   z-index: 4;
   display: block;
   padding: 24px;
@@ -731,7 +739,9 @@ body {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  transition: transform var(--timing-duration) var(--timing-function);
+  transition: opacity var(--timing-duration) var(--timing-function),
+    transform var(--timing-duration) var(--timing-function),
+    visibility var(--timing-duration) var(--timing-function);
 }
 
 .modal-close-btn {
@@ -747,9 +757,21 @@ body {
   width: 24px;
   height: 24px;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
 .modal-close-btn:hover,
 .modal-close-btn:focus {
+  background-color: var(--iris);
+
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.drop-icon {
+  fill: var(--black);
+}
+
+.modal-close-btn:hover .drop-icon,
+.modal-close-btn:focus .drop-icon {
+  fill: var(--cornflower);
 }
